--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,62 @@
     font-weight: 400;
     font-style: normal;
 }
+
+a {
+    text-decoration: none;
+}
+
+/* header rules */
+
+header {
+    position: fixed;
+    width: 100%;
+    height: 10vh;
+    z-index: 1000;
+    background-color: black;
+    top: 0;
+    left: 0;
+}
+
+div.hLinks {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+span.hLinks {
+    color: white;
+}
   
+/* structure */
+
+.container {
+    margin-top: 150px;
+    margin-bottom: 80px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.people {
+    width: calc(100% - 200px);
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.person {
+    width: calc(100% / 8);
+    height: 150px;
+    background-color: cyan;
+}
+
+/* footer rules */
+
+footer {
+    width: 100%;
+    height: 10vh;
+    background-color: black;
+}
