--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,20 @@ a {
     text-decoration: none;
 }
 
+/* utils  */
+
+.black {
+    background-color: black;
+}
+
+.grey {
+    background-color: grey;
+}
+
+.darkgrey {
+    background-color: #3b3b3b;
+}
+
 /* header rules */
 
 header {
@@ -18,18 +32,23 @@ header {
     width: 100%;
     height: 10vh;
     z-index: 1000;
-    background-color: black;
-    top: 0;
+    top: 0px;
     left: 0;
 }
 
 div.hLinks {
     position: absolute;
-    bottom: 0;
+    bottom: 10px;
     right: 0;
 }
 
-span.hLinks {
+a.hLinks {
+    padding: 5px;
+    margin-right: 10px;
+    border-radius: 7px;
+}
+
+span.hLinks, span.names {
     color: white;
 }
   
@@ -44,24 +63,42 @@ span.hLinks {
     align-items: center;
 }
 
+/* people list */
+
 .people {
     width: calc(100% - 200px);
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 10px;
+    row-gap: 15px;
+    column-gap: 10px;
 }
 
+/* single person rules */
+
 .person {
+    background-image: url(https://picsum.photos/200/300);
+    background-size: cover;
     width: calc(100% / 8);
     height: 150px;
     background-color: cyan;
+    position: relative;
+}
+
+.pCommands {
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    
 }
 
 /* footer rules */
 
 footer {
+    position: fixed;
     width: 100%;
     height: 10vh;
-    background-color: black;
+    z-index: 1000;
+    bottom: 0px;
+    left: 0;
 }
