--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,14 @@ a {
     background-color: #3b3b3b;
 }
 
+span.white {
+    font-weight: bold;
+}
+
+.arrow {
+    color: white;
+}
+
 /* header rules */
 
 header {
@@ -48,7 +56,7 @@ a.hLinks {
     border-radius: 7px;
 }
 
-span.hLinks, span.names {
+span.hLinks, span.names, span.white {
     color: white;
 }
   
@@ -56,7 +64,7 @@ span.hLinks, span.names {
 
 .container {
     margin-top: 150px;
-    margin-bottom: 80px;
+    margin-bottom: 150px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -81,7 +89,6 @@ span.hLinks, span.names {
     background-size: cover;
     width: calc(100% / 8);
     height: 150px;
-    background-color: cyan;
     position: relative;
 }
 
@@ -95,10 +102,60 @@ span.hLinks, span.names {
 /* footer rules */
 
 footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     width: 100%;
     height: 10vh;
     z-index: 1000;
     bottom: 0px;
     left: 0;
+}
+
+/* commands rules */
+
+.commandContainer {
+    display: flex;
+    width: calc(100% - 20px);
+    justify-content: space-between;
+}
+
+.buttonContainer {
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+}
+
+.cornerContainer {
+    display: flex;
+    width: 20%;
+    gap: 20px;
+}
+
+.left {
+    justify-content: flex-start;
+}
+
+.right {
+    justify-content: flex-end;
+}
+
+.command {
+    color:white;
+    font-size: 35px;
+}
+
+.icon-text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.endMeeting {
+    height: 100%;
+    padding: 20px 10px;
+    color: red;
 }
