added opacity on names

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ span.hLinks, span.names, span.white {
     position: absolute;
     bottom: 15px;
     left: 0;
-    
+    opacity: 0.4;   
 }
 
 /* footer rules */
